# webfront

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: render_project_tree.py
src/webfront/: app.py  main.py  renderable.py
src/webfront/html/: attributes.py  elements.py  page.py
src/webfront/resource/: __init__.py  base.py
src/webfront/resource/icon/: __init__.py  component.html  component.py
tests/html/: test_attributes.py  test_elements.py  test_page.py
