[project]
name = "webfront"
version = "0.1.0"
description = "A Python library that compiles declarative UI code into static HTML, CSS, and JavaScript."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Dylan LEBRETON", email = "dylan.lebreton1996@gmail.com" },
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "treeproject>=0.1.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/dylan-lebreton/webfront"
Repository = "https://github.com/dylan-lebreton/webfront"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
